Serialize initial form data and store at a private form element attribute ._track

--- a/test/jquery-track.html
+++ b/test/jquery-track.html
@@ -18,10 +18,15 @@
 </head>
 <body>
   <div id="qunit"></div>
-  <div id="qunit-fixture">
-    <span>lame test markup</span>
-    <span>normal test markup</span>
-    <span>awesome test markup</span>
+  <!--<div id="qunit-fixture">-->
+    <!--<span>lame test markup</span>-->
+    <!--<span>normal test markup</span>-->
+    <!--<span>awesome test markup</span>-->
+  <!--</div>-->
+  <div id="dummy">
   </div>
+  <form>
+    <input name="number" value="1" />
+  </form>
 </body>
 </html>
