+ Multiple fields + Serialize initial form data and store at a private form element attribute ._track

--- a/test/jquery-track.html
+++ b/test/jquery-track.html
@@ -28,5 +28,10 @@
   <form>
     <input name="number" value="1" />
   </form>
+
+  <form id="form-multi-text">
+    <input name="number" value="1" />
+    <input name="string" value="a" />
+  </form>
 </body>
 </html>
